// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty property set 1`] = `
<div
  className="property-set form-row"
/>
`;

exports[`inline layout1 1`] = `
<div
  className="property-set"
>
  <div
    className="property form-group required mb-2 mr-sm-2"
  >
    <input
      className="property-input form-control"
      disabled={undefined}
      id="namePropertyInput"
      maxLength={undefined}
      onChange={[Function]}
      onInput={[Function]}
      onInvalid={[Function]}
      pattern={undefined}
      placeholder="Name"
      required={true}
      size={undefined}
      type="text"
      value=""
    />
  </div>
  <div
    className="property form-group required mb-2 mr-sm-2"
  >
    <div
      style={
        Object {
          "maxWidth": "100%",
          "width": "244px",
        }
      }
    >
      <div
        className="Select property-input is-clearable is-searchable Select--single"
        style={undefined}
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={undefined}
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-16--value"
          >
            <div
              className="Select-placeholder"
            >
              Subject
            </div>
            <div
              className="Select-input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-activedescendant="react-select-16--value"
                aria-describedby={undefined}
                aria-expanded="false"
                aria-haspopup="false"
                aria-label={undefined}
                aria-labelledby={undefined}
                aria-owns=""
                className={undefined}
                id={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                role="combobox"
                style={
                  Object {
                    "boxSizing": "content-box",
                    "width": "5px",
                  }
                }
                tabIndex={undefined}
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`inline layout2 1`] = `
<div
  className="property-set"
>
  <div
    className="property form-group required mb-2 mr-sm-2"
  >
    <label
      className="form-control-label mr-sm-2"
      htmlFor="name2PropertyInput"
    >
      Name
    </label>
    <input
      className="property-input form-control"
      disabled={undefined}
      id="name2PropertyInput"
      maxLength={undefined}
      onChange={[Function]}
      onInput={[Function]}
      onInvalid={[Function]}
      pattern={undefined}
      placeholder={undefined}
      required={true}
      size={10}
      type="text"
      value="value"
    />
  </div>
  <div
    className="property form-check required mb-2 mr-sm-2"
  >
    <input
      checked={false}
      className="property-input form-check-input"
      disabled={undefined}
      id="subject2PropertyInput"
      onChange={[Function]}
      required={true}
      size={undefined}
      type="checkbox"
    />
    <label
      className="form-check-label"
      htmlFor="subject2PropertyInput"
    >
      Remember me
    </label>
  </div>
  <div
    className="property form-group required mb-2 mr-sm-2"
  >
    <label
      className="property-input"
      id="labelFieldPropertyInput"
    >
      Text label
    </label>
  </div>
  <div
    className="property form-group required mb-2 mr-sm-2 display-none"
  >
    <input
      className="property-input form-control"
      disabled={undefined}
      id="hiddenInputPropertyInput"
      maxLength={undefined}
      onChange={[Function]}
      onInput={[Function]}
      onInvalid={[Function]}
      pattern={undefined}
      placeholder="hidden"
      required={true}
      size={undefined}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="property-set form-row"
>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <label
        className="form-control-label"
        htmlFor="textInputPropertyInput"
      >
        Text input
      </label>
      <div
        className="controls"
      >
        <input
          className="property-input form-control"
          disabled={undefined}
          id="textInputPropertyInput"
          maxLength={undefined}
          onChange={[Function]}
          onInput={[Function]}
          onInvalid={[Function]}
          pattern={undefined}
          placeholder={undefined}
          required={true}
          size={undefined}
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <label
        className="form-control-label"
        htmlFor="datePropertyInput"
      >
        Date
      </label>
      <div
        className="controls"
      >
        <div
          className="rdt"
        >
          <input
            className="property-input form-control"
            disabled={undefined}
            id="datePropertyInput"
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onInvalid={[Function]}
            onKeyDown={[Function]}
            pattern="(^$|\\\\d{1,2}\\\\.\\\\d{1,2}\\\\.\\\\d{4})"
            placeholder={undefined}
            required={true}
            size={undefined}
            type="text"
            value="20.07.2017"
          />
          <div
            className="rdtPicker"
          >
            <div
              className="rdtDays"
            >
              <table>
                <thead>
                  <tr>
                    <th
                      className="rdtPrev"
                      onClick={[Function]}
                    >
                      <span>
                        ‹
                      </span>
                    </th>
                    <th
                      className="rdtSwitch"
                      colSpan={5}
                      data-value={6}
                      onClick={[Function]}
                    >
                      July 2017
                    </th>
                    <th
                      className="rdtNext"
                      onClick={[Function]}
                    >
                      <span>
                        ›
                      </span>
                    </th>
                  </tr>
                  <tr>
                    <th
                      className="dow"
                    >
                      Su
                    </th>
                    <th
                      className="dow"
                    >
                      Mo
                    </th>
                    <th
                      className="dow"
                    >
                      Tu
                    </th>
                    <th
                      className="dow"
                    >
                      We
                    </th>
                    <th
                      className="dow"
                    >
                      Th
                    </th>
                    <th
                      className="dow"
                    >
                      Fr
                    </th>
                    <th
                      className="dow"
                    >
                      Sa
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="rdtDay rdtOld"
                      data-value={25}
                      onClick={[Function]}
                    >
                      25
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={26}
                      onClick={[Function]}
                    >
                      26
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={27}
                      onClick={[Function]}
                    >
                      27
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={28}
                      onClick={[Function]}
                    >
                      28
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={29}
                      onClick={[Function]}
                    >
                      29
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={30}
                      onClick={[Function]}
                    >
                      30
                    </td>
                    <td
                      className="rdtDay"
                      data-value={1}
                      onClick={[Function]}
                    >
                      1
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={2}
                      onClick={[Function]}
                    >
                      2
                    </td>
                    <td
                      className="rdtDay"
                      data-value={3}
                      onClick={[Function]}
                    >
                      3
                    </td>
                    <td
                      className="rdtDay"
                      data-value={4}
                      onClick={[Function]}
                    >
                      4
                    </td>
                    <td
                      className="rdtDay"
                      data-value={5}
                      onClick={[Function]}
                    >
                      5
                    </td>
                    <td
                      className="rdtDay"
                      data-value={6}
                      onClick={[Function]}
                    >
                      6
                    </td>
                    <td
                      className="rdtDay"
                      data-value={7}
                      onClick={[Function]}
                    >
                      7
                    </td>
                    <td
                      className="rdtDay"
                      data-value={8}
                      onClick={[Function]}
                    >
                      8
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={9}
                      onClick={[Function]}
                    >
                      9
                    </td>
                    <td
                      className="rdtDay"
                      data-value={10}
                      onClick={[Function]}
                    >
                      10
                    </td>
                    <td
                      className="rdtDay"
                      data-value={11}
                      onClick={[Function]}
                    >
                      11
                    </td>
                    <td
                      className="rdtDay"
                      data-value={12}
                      onClick={[Function]}
                    >
                      12
                    </td>
                    <td
                      className="rdtDay"
                      data-value={13}
                      onClick={[Function]}
                    >
                      13
                    </td>
                    <td
                      className="rdtDay"
                      data-value={14}
                      onClick={[Function]}
                    >
                      14
                    </td>
                    <td
                      className="rdtDay"
                      data-value={15}
                      onClick={[Function]}
                    >
                      15
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={16}
                      onClick={[Function]}
                    >
                      16
                    </td>
                    <td
                      className="rdtDay"
                      data-value={17}
                      onClick={[Function]}
                    >
                      17
                    </td>
                    <td
                      className="rdtDay"
                      data-value={18}
                      onClick={[Function]}
                    >
                      18
                    </td>
                    <td
                      className="rdtDay"
                      data-value={19}
                      onClick={[Function]}
                    >
                      19
                    </td>
                    <td
                      className="rdtDay rdtActive"
                      data-value={20}
                      onClick={[Function]}
                    >
                      20
                    </td>
                    <td
                      className="rdtDay"
                      data-value={21}
                      onClick={[Function]}
                    >
                      21
                    </td>
                    <td
                      className="rdtDay"
                      data-value={22}
                      onClick={[Function]}
                    >
                      22
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={23}
                      onClick={[Function]}
                    >
                      23
                    </td>
                    <td
                      className="rdtDay"
                      data-value={24}
                      onClick={[Function]}
                    >
                      24
                    </td>
                    <td
                      className="rdtDay"
                      data-value={25}
                      onClick={[Function]}
                    >
                      25
                    </td>
                    <td
                      className="rdtDay"
                      data-value={26}
                      onClick={[Function]}
                    >
                      26
                    </td>
                    <td
                      className="rdtDay"
                      data-value={27}
                      onClick={[Function]}
                    >
                      27
                    </td>
                    <td
                      className="rdtDay"
                      data-value={28}
                      onClick={[Function]}
                    >
                      28
                    </td>
                    <td
                      className="rdtDay"
                      data-value={29}
                      onClick={[Function]}
                    >
                      29
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={30}
                      onClick={[Function]}
                    >
                      30
                    </td>
                    <td
                      className="rdtDay"
                      data-value={31}
                      onClick={[Function]}
                    >
                      31
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={1}
                      onClick={[Function]}
                    >
                      1
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={2}
                      onClick={[Function]}
                    >
                      2
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={3}
                      onClick={[Function]}
                    >
                      3
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={4}
                      onClick={[Function]}
                    >
                      4
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={5}
                      onClick={[Function]}
                    >
                      5
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <label
        className="form-control-label"
        htmlFor="maskPropertyInput"
      >
        Mask
      </label>
      <div
        className="controls"
      >
        <input
          className="property-input form-control"
          disabled={undefined}
          id="maskPropertyInput"
          mask="11111"
          maxLength={5}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onPaste={[Function]}
          placeholder="_____"
          required={true}
          size={5}
          value="123__"
        />
      </div>
    </div>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <label
        className="form-control-label"
        htmlFor="textAreaPropertyInput"
      >
        TextArea
      </label>
      <div
        className="controls"
      >
        <textarea
          className="property-input form-control"
          disabled={undefined}
          id="textAreaPropertyInput"
          maxLength={undefined}
          onChange={[Function]}
          onInput={[Function]}
          onInvalid={[Function]}
          pattern={undefined}
          placeholder={undefined}
          required={true}
          rows={3}
          size={undefined}
          value="test"
        />
      </div>
    </div>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-check required"
    >
      <input
        checked={true}
        className="property-input form-check-input"
        disabled={undefined}
        id="checkBoxPropertyInput"
        onChange={[Function]}
        required={true}
        size={undefined}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="checkBoxPropertyInput"
      >
        CheckBox
      </label>
    </div>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group"
    >
      <label
        className="form-control-label"
        htmlFor="filePropertyInput"
      >
        File
      </label>
      <div
        className="controls"
      >
        <input
          className="property-input form-control-file"
          disabled={undefined}
          id="filePropertyInput"
          multiple={undefined}
          onChange={[Function]}
          required={false}
          size={undefined}
          type="file"
        />
      </div>
    </div>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <label
        className="form-control-label"
        htmlFor="selectPropertyInput"
      >
        Select
      </label>
      <div
        className="controls"
      >
        <div
          style={undefined}
        >
          <div
            className="Select property-input has-value is-clearable is-searchable Select--single"
            style={undefined}
          >
            <input
              disabled={false}
              name="selectPropertyInput"
              type="hidden"
              value="vanilla"
            />
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-5--value"
              >
                <div
                  className="Select-value"
                  style={undefined}
                  title={undefined}
                >
                  <span
                    aria-selected="true"
                    className="Select-value-label"
                    id="react-select-5--value-item"
                    role="option"
                  >
                    Vanilla
                  </span>
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-5--value"
                    aria-describedby={undefined}
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-label={undefined}
                    aria-labelledby={undefined}
                    aria-owns=""
                    className={undefined}
                    id={undefined}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    tabIndex={undefined}
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                aria-label="Clear value"
                className="Select-clear-zone"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                title="Clear value"
              >
                <span
                  className="Select-clear"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&times;",
                    }
                  }
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <label
        className="form-control-label"
        htmlFor="virtualizedSelectPropertyInput"
      >
        VirtualizedSelect
      </label>
      <div
        className="controls"
      >
        <div
          style={undefined}
        >
          <div
            className="Select property-input has-value is-clearable is-searchable Select--single"
            style={undefined}
          >
            <input
              disabled={false}
              name="virtualizedSelectPropertyInput"
              type="hidden"
              value="vanilla"
            />
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-6--value"
              >
                <div
                  className="Select-value"
                  style={undefined}
                  title={undefined}
                >
                  <span
                    aria-selected="true"
                    className="Select-value-label"
                    id="react-select-6--value-item"
                    role="option"
                  >
                    Vanilla
                  </span>
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-6--value"
                    aria-describedby={undefined}
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-label={undefined}
                    aria-labelledby={undefined}
                    aria-owns=""
                    className={undefined}
                    id={undefined}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    tabIndex={undefined}
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                aria-label="Clear value"
                className="Select-clear-zone"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                title="Clear value"
              >
                <span
                  className="Select-clear"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&times;",
                    }
                  }
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <label
        className="form-control-label"
        htmlFor="multiSelectPropertyInput"
      >
        Multi Select
      </label>
      <div
        className="controls"
      >
        <div
          style={undefined}
        >
          <div
            className="Select property-input has-value is-clearable is-searchable Select--multi"
            style={undefined}
          >
            <input
              disabled={false}
              name="multiSelectPropertyInput"
              type="hidden"
              value="chocolate"
            />
            <input
              disabled={false}
              name="multiSelectPropertyInput"
              type="hidden"
              value="strawberry"
            />
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-7--value"
              >
                <div
                  className="Select-value"
                  style={undefined}
                  title={undefined}
                >
                  <span
                    aria-hidden="true"
                    className="Select-value-icon"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                  >
                    ×
                  </span>
                  <span
                    aria-selected="true"
                    className="Select-value-label"
                    id="react-select-7--value-0"
                    role="option"
                  >
                    Chocolate
                    <span
                      className="Select-aria-only"
                    >
                       
                    </span>
                  </span>
                </div>
                <div
                  className="Select-value"
                  style={undefined}
                  title={undefined}
                >
                  <span
                    aria-hidden="true"
                    className="Select-value-icon"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                  >
                    ×
                  </span>
                  <span
                    aria-selected="true"
                    className="Select-value-label"
                    id="react-select-7--value-1"
                    role="option"
                  >
                    Strawberry
                    <span
                      className="Select-aria-only"
                    >
                       
                    </span>
                  </span>
                </div>
                <div
                  className="Select-input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-activedescendant="react-select-7--value"
                    aria-describedby={undefined}
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-label={undefined}
                    aria-labelledby={undefined}
                    aria-owns=""
                    className={undefined}
                    id={undefined}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    style={
                      Object {
                        "boxSizing": "content-box",
                        "width": "5px",
                      }
                    }
                    tabIndex={undefined}
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </span>
              <span
                aria-label="Clear all"
                className="Select-clear-zone"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                title="Clear all"
              >
                <span
                  className="Select-clear"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&times;",
                    }
                  }
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="form-group property property-label col-lg-12"
  >
    <label
      className="property-input"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Pellentesque habitant morbi tristique senectus et netus et <a href=\\"#test\\">Link</a> malesuada fames ac <b>turpis</b> egestas.</p>",
        }
      }
      id="labelFieldRawPropertyInput"
    />
  </div>
  <div
    className="form-group property property-label col-lg-12"
  >
    <label
      className="property-input text-warning"
      id="labelFieldPropertyInput"
    >
      Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
    </label>
  </div>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <label
        className="form-control-label"
        htmlFor="WYSIWYGPropertyInput"
      >
        WYSIWYG
      </label>
      <div
        className="controls"
      >
        <div
          className="p10"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`simple property set 1`] = `
<div
  className="property-set form-row"
>
  <div
    className="vertical-input col-lg-12"
  >
    <div
      className="property form-group required"
    >
      <div
        className="controls"
      >
        <input
          className="property-input form-control"
          disabled={undefined}
          id="numberPropertyInput"
          maxLength={undefined}
          onChange={[Function]}
          onInput={[Function]}
          onInvalid={[Function]}
          pattern={undefined}
          placeholder={undefined}
          required={true}
          size={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test outer 1`] = `
<div
  className="property-set form-row"
>
  <div
    className="property-group property-group__top-line col-12"
  >
    <div
      className="property-group__top-line-row row"
    />
    <h4
      className="property-group__title"
    >
      Group 1
    </h4>
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="textInputPropertyInput"
          >
            Name
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="textInputPropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="test"
            />
            <small
              className="form-text text-muted"
            >
              Help text
            </small>
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-check required"
        >
          <input
            checked={true}
            className="property-input form-check-input"
            disabled={undefined}
            id="checkBoxPropertyInput"
            onChange={[Function]}
            required={true}
            size={undefined}
            type="checkbox"
          />
          <label
            className="form-check-label"
            htmlFor="checkBoxPropertyInput"
          >
            CheckBox
          </label>
          <small
            className="form-text text-muted"
          >
            You must check before submitting.
          </small>
        </div>
      </div>
      <div
        className="form-group property property-label col-lg-12"
      >
        <label
          className="property-input"
          id="labelFieldPropertyInput"
        >
          Pellentesque habitant morbi tristique senectus...
        </label>
      </div>
    </div>
  </div>
  <div
    className="property-group property-group__top-line col-12"
  >
    <div
      className="property-group__top-line-row row"
    />
    <h4
      className="property-group__title"
    >
      Server side validation - error
    </h4>
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="textInput2PropertyInput"
          >
            Name
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control is-invalid"
              disabled={undefined}
              id="textInput2PropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="test"
            />
            <div
              className="invalid-feedback"
            >
              The name is already in use.
            </div>
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="select2PropertyInput"
          >
            Select
          </label>
          <div
            className="controls"
          >
            <div
              style={undefined}
            >
              <div
                className="Select property-input is-invalid has-value is-clearable is-searchable Select--single"
                style={undefined}
              >
                <input
                  disabled={false}
                  name="select2PropertyInput"
                  type="hidden"
                  value="vanilla"
                />
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={undefined}
                >
                  <span
                    className="Select-multi-value-wrapper"
                    id="react-select-14--value"
                  >
                    <div
                      className="Select-value"
                      style={undefined}
                      title={undefined}
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-14--value-item"
                        role="option"
                      >
                        Vanilla
                      </span>
                    </div>
                    <div
                      className="Select-input"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-14--value"
                        aria-describedby={undefined}
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-label={undefined}
                        aria-labelledby={undefined}
                        aria-owns=""
                        className={undefined}
                        id={undefined}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          Object {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        tabIndex={undefined}
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </span>
                  <span
                    aria-label="Clear value"
                    className="Select-clear-zone"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    title="Clear value"
                  >
                    <span
                      className="Select-clear"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&times;",
                        }
                      }
                    />
                  </span>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-check"
        >
          <input
            checked={true}
            className="property-input form-check-input is-invalid"
            disabled={undefined}
            id="checkBox2PropertyInput"
            onChange={[Function]}
            required={false}
            size={undefined}
            type="checkbox"
          />
          <label
            className="form-check-label"
            htmlFor="checkBox2PropertyInput"
          >
            CheckBox
          </label>
          <div
            className="invalid-feedback"
          >
            This option is not available in the current state.
          </div>
        </div>
      </div>
      <div
        className="form-group property property-label col-lg-12"
      >
        <label
          className="property-input text-danger"
          id="labelField2PropertyInput"
        >
          Pellentesque habitant morbi tristique senectus...
        </label>
      </div>
    </div>
  </div>
  <div
    className="property-group property-group__top-line col-12"
  >
    <div
      className="property-group__top-line-row row"
    />
    <h4
      className="property-group__title"
    >
      Server side validation - success
    </h4>
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="textInput3PropertyInput"
          >
            Name
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control is-valid"
              disabled={undefined}
              id="textInput3PropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="test"
            />
            <div
              className="valid-feedback"
            >
              Ok here
            </div>
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="select3PropertyInput"
          >
            Select
          </label>
          <div
            className="controls"
          >
            <div
              style={undefined}
            >
              <div
                className="Select property-input is-valid has-value is-clearable is-searchable Select--single"
                style={undefined}
              >
                <input
                  disabled={false}
                  name="select3PropertyInput"
                  type="hidden"
                  value="vanilla"
                />
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={undefined}
                >
                  <span
                    className="Select-multi-value-wrapper"
                    id="react-select-15--value"
                  >
                    <div
                      className="Select-value"
                      style={undefined}
                      title={undefined}
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-15--value-item"
                        role="option"
                      >
                        Vanilla
                      </span>
                    </div>
                    <div
                      className="Select-input"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-15--value"
                        aria-describedby={undefined}
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-label={undefined}
                        aria-labelledby={undefined}
                        aria-owns=""
                        className={undefined}
                        id={undefined}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          Object {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        tabIndex={undefined}
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </span>
                  <span
                    aria-label="Clear value"
                    className="Select-clear-zone"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    title="Clear value"
                  >
                    <span
                      className="Select-clear"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&times;",
                        }
                      }
                    />
                  </span>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-check required"
        >
          <input
            checked={true}
            className="property-input form-check-input is-valid"
            disabled={undefined}
            id="checkBox3PropertyInput"
            onChange={[Function]}
            required={true}
            size={undefined}
            type="checkbox"
          />
          <label
            className="form-check-label"
            htmlFor="checkBox3PropertyInput"
          >
            CheckBox
          </label>
          <div
            className="valid-feedback"
          >
            Ok here
          </div>
        </div>
      </div>
      <div
        className="form-group property property-label col-lg-12"
      >
        <label
          className="property-input text-success"
          id="labelField3PropertyInput"
        >
          Pellentesque habitant morbi tristique senectus...
        </label>
      </div>
    </div>
  </div>
  <div
    className="property-group property-group__top-line col-12"
  >
    <div
      className="property-group__top-line-row row"
    />
    <h4
      className="property-group__title"
    >
      Group 4 - CanBeNull
    </h4>
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group"
        >
          <label
            className="form-control-label"
            htmlFor="textInput4PropertyInput"
          >
            Name
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="textInput4PropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={false}
              size={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="property-group property-group__top-line col-12"
  >
    <div
      className="property-group__top-line-row row"
    />
    <h4
      className="property-group__title"
    >
      Group 5 - use cssClasses
    </h4>
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-md-8"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="customSizeTextAreaPropertyInput"
          >
            Custom size textArea
          </label>
          <div
            className="controls"
          >
            <textarea
              className="property-input form-control"
              disabled={undefined}
              id="customSizeTextAreaPropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              rows="5"
              size={undefined}
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-md-4"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="namePropertyInput"
          >
            Name
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="namePropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-md-4"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="subjectPropertyInput"
          >
            Subject
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="subjectPropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="property-group col-md-8"
  >
    <div
      className="property-group__top-line-row row"
    />
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="customSizeTextArea2PropertyInput"
          >
            TextArea in groupClasses
          </label>
          <div
            className="controls"
          >
            <textarea
              className="property-input form-control"
              disabled={undefined}
              id="customSizeTextArea2PropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              rows="5"
              size={undefined}
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="property-group col-md-4"
  >
    <div
      className="property-group__top-line-row row"
    />
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="name2PropertyInput"
          >
            Name
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="name2PropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="subject2PropertyInput"
          >
            Subject
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="subject2PropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`validationTest 1`] = `
<div
  className="property-set form-row"
>
  <div
    className="property-group property-group__top-line col-12"
  >
    <div
      className="property-group__top-line-row row"
    />
    <h4
      className="property-group__title"
    >
      Numbers
    </h4>
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="shortPropertyInput"
          >
            Short
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              data-info-range="-32768, 32767"
              data-info-step="1"
              data-info-type="Short"
              disabled={undefined}
              id="shortPropertyInput"
              onChange={[Function]}
              onInput={[Function]}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="32767"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="integerPropertyInput"
          >
            Integer
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              data-info-range="-2147483648, 2147483647"
              data-info-step="1"
              data-info-type="Integer"
              disabled={undefined}
              id="integerPropertyInput"
              onChange={[Function]}
              onInput={[Function]}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="2147483647"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="longPropertyInput"
          >
            Long
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              data-info-range="-9223372036854775808, 9223372036854775807"
              data-info-step="1"
              data-info-type="Long"
              disabled={undefined}
              id="longPropertyInput"
              onChange={[Function]}
              onInput={[Function]}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="9223372036854775807"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="doublePropertyInput"
          >
            Double
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              data-info-range={undefined}
              data-info-step={undefined}
              data-info-type="Double"
              disabled={undefined}
              id="doublePropertyInput"
              onChange={[Function]}
              onInput={[Function]}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="100.1"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="doubleWithRangeAndStepPropertyInput"
          >
            Number input with range and double step
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              data-info-range="0, 1000"
              data-info-step="0.5"
              data-info-type={undefined}
              disabled={undefined}
              id="doubleWithRangeAndStepPropertyInput"
              onChange={[Function]}
              onInput={[Function]}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="100.5"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group"
        >
          <label
            className="form-control-label"
            htmlFor="integerWithRangeAndStepPropertyInput"
          >
            Number input with range and integer step
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              data-info-range="0, 100"
              data-info-step="10"
              data-info-type="Integer"
              disabled={undefined}
              id="integerWithRangeAndStepPropertyInput"
              onChange={[Function]}
              onInput={[Function]}
              placeholder={undefined}
              required={false}
              size={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="property-group property-group__top-line col-12"
  >
    <div
      className="property-group__top-line-row row"
    />
    <h4
      className="property-group__title"
    >
      Text
    </h4>
    <div
      className="property-group__row form-row"
    >
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="textInputPropertyInput"
          >
            Text input with columnSize
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="textInputPropertyInput"
              maxLength={10}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="text"
              value="qwerty7890"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group"
        >
          <label
            className="form-control-label"
            htmlFor="textInputWithPatternPropertyInput"
          >
            Text input with pattern
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="textInputWithPatternPropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern="^[A-Za-zА-Яа-яЁё]+$"
              placeholder={undefined}
              required={false}
              size={undefined}
              type="text"
              value="AZazАЯаяЁё"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group"
        >
          <label
            className="form-control-label"
            htmlFor="textInputWithPatternAndMessagePropertyInput"
          >
            Text input with pattern and message
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="textInputWithPatternAndMessagePropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern="\\\\d{3}"
              placeholder="999"
              required={false}
              size={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="passwordPropertyInput"
          >
            Password
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="passwordPropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="password"
              value="123"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="passwordInValidationRulesPropertyInput"
          >
            Password in extraAttrs
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="passwordInValidationRulesPropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="password"
              value="123"
            />
          </div>
        </div>
      </div>
      <div
        className="vertical-input col-lg-12"
      >
        <div
          className="property form-group required"
        >
          <label
            className="form-control-label"
            htmlFor="emailPropertyInput"
          >
            Email type
          </label>
          <div
            className="controls"
          >
            <input
              className="property-input form-control"
              disabled={undefined}
              id="emailPropertyInput"
              maxLength={undefined}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              pattern={undefined}
              placeholder={undefined}
              required={true}
              size={undefined}
              type="email"
              value="test@mail.ru"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
